# API_dataphonia_custom

./: .gitignore  README.md  dataphonia.env  dataphonia.py  main.py  pyproject.toml  requirements.txt  utils.py
API_dataphonia_custom/: dataphonia.py
API_dataphonia_custom.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
output/: metadonnees_fichiers.csv
