[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "API_dataphonia_custom"
description = "Ma librairie personnalisée"
authors = [{ name = "Rémi Mustière", email = "remi.mustiere@biophonia.fr" }]
dependencies = [
    "numpy",
    "pandas",
    "requests"
    "getconf",
    "boto3",
    "s3transfer",
    "botocore",
    "dotenv",
]

[tool.setuptools]
packages = ["API_dataphonia_custom"]

[project.urls]
homepage = "https://biophonia.fr/"
